Add introduction paragraph text and import font styles

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="assets/css/style.css" />
     <title>Friends Quiz</title>
   </head>
 
@@ -11,5 +12,11 @@
 
   <body>
     <h1>Can You Pass The Ultimate Friends Quiz?</h1>
+    <p>
+      The average fan may know the lyrics to Phoebe's "Smelly Cat" or what the
+      color of the couch is in Central Perk, but only a die-hard stan remembers
+      how many sisters Joey has or when Chandler's birthday is.
+    </p>
+    <script src="assets/js/script.js"></script>
   </body>
 </html>
