Add a start button to start the quizzz

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <link rel="stylesheet" href="assets/css/style.css" />
     <title>Friends Quiz</title>
   </head>
@@ -11,12 +12,24 @@
   <!--body of work-->
 
   <body>
+    <!--heading and paragraph for start page-->
+
     <h1>Can You Pass The Ultimate Friends Quiz?</h1>
     <p>
-      The average fan may know the lyrics to Phoebe's "Smelly Cat" or what the
-      color of the couch is in Central Perk, but only a die-hard stan remembers
-      how many sisters Joey has or when Chandler's birthday is.
+      The average fan may know the lyrics to Phoebe's <em>"Smelly Cat"</em> or
+      what the color of the couch is in Central Park, but only a die-hard stan
+      remembers how many sisters Joey has or when Chandler's birthday is.
     </p>
+    <p>
+      Lets see if you are a true fan or not! Press the start button to get
+      started.
+    </p>
+    <div class="container"></div>
+    <div id="question-container" class="hide"></div>
+    <div class="controls">
+      <button id="start-button" class="start-btn btn">Start</button>
+    </div>
+
     <script src="assets/js/script.js"></script>
   </body>
 </html>
