--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link rel="stylesheet" href="assets/css/style.css" />
+    
     <title>Friends Quiz</title>
   </head>
 
@@ -18,10 +19,10 @@
       <h1>Can You Pass The Ultimate Movie and Series Quiz?</h1>
       <p>
         The average fan may know the lyrics to Phoebe's <em>"Smelly Cat"</em> or
-        what the first ever Pixar film was, would you know the year though? Now
-        is the time to test your knowledge. The rules are simple, just answer if
-        the questions are true or false, but NO cheating! You can't ask our
-        trusty friend Google!
+        what the first ever Pixar film was, but would you know the year though?
+        Now is the time to test your knowledge. The rules are simple, just
+        answer if the questions are true or false, but NO cheating! You can't
+        ask our trusty friend Google!
       </p>
       <p>Hit the start button to begin! Good luck.</p>
 
@@ -34,7 +35,7 @@
       <button class="btn">Answer 1</button>
       <div class="controls">
         <button id="start-button" class="start-btn btn">Start</button>
-        <button id="start-button" class="start-btn btn">Next</button>
+        <button id="next-button" class="next-btn btn">Next</button>
       </div>
     </div>
 
