Add an Event Listener to the start button

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link rel="stylesheet" href="assets/css/style.css" />
-    
+    <script defer src="assets/js/script.js"></script>
+
     <title>Friends Quiz</title>
   </head>
 
@@ -19,26 +20,31 @@
       <h1>Can You Pass The Ultimate Movie and Series Quiz?</h1>
       <p>
         The average fan may know the lyrics to Phoebe's <em>"Smelly Cat"</em> or
-        what the first ever Pixar film was, but would you know the year though?
-        Now is the time to test your knowledge. The rules are simple, just
+        what the first ever Pixar film was... question is, would you know the
+        year? Now is the time to test your knowledge. The rules are simple, just
         answer if the questions are true or false, but NO cheating! You can't
         ask our trusty friend Google!
       </p>
       <p>Hit the start button to begin! Good luck.</p>
 
-      <!--start button and true and false buttons-->
+      <!--question container-->
 
       <div id="question-container" class="hide"></div>
       <div id="question">Question</div>
+
+      <!--answer buttons-->
+
       <div id="answer-buttons" class="btn-grid"></div>
       <button class="btn">Answer 1</button>
       <button class="btn">Answer 1</button>
-      <div class="controls">
-        <button id="start-button" class="start-btn btn">Start</button>
-        <button id="next-button" class="next-btn btn">Next</button>
-      </div>
-    </div>
+      <button class="btn">Answer 1</button>
+      <button class="btn">Answer 1</button>
 
-    <script src="assets/js/script.js"></script>
+      <!--start and next button-->
+
+      <div class="controls"></div>
+      <button id="start-btn" class="start-btn btn">Start</button>
+      <button id="next-btn" class="next-btn btn hide">Next</button>
+    </div>
   </body>
 </html>
