Add a hover button to the already implemented buttons

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         The average fan may know the lyrics to Phoebe's <em>"Smelly Cat"</em> or
         what the first ever Pixar film was... question is, would you know the
         year? Now is the time to test your knowledge. The rules are simple, just
-        answer if the questions are true or false, but NO cheating! You can't
-        ask our trusty friend Google!
+        pick the correct answer out of the four choices, but NO cheating! You
+        can't ask our trusty friend Google!
       </p>
       <p>Hit the start button to begin! Good luck.</p>
 
@@ -35,10 +35,10 @@
       <!--answer buttons-->
 
       <div id="answer-buttons" class="btn-grid"></div>
-      <button class="btn">Answer 1</button>
-      <button class="btn">Answer 1</button>
-      <button class="btn">Answer 1</button>
-      <button class="btn">Answer 1</button>
+      <button class="btn correct">Answer 1</button>
+      <button class="btn wrong">Answer 2</button>
+      <button class="btn">Answer 3</button>
+      <button class="btn">Answer 4</button>
 
       <!--start and next button-->
 
