Add shuffled questions to the array

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
       <!--answer buttons-->
 
       <div id="answer-buttons" class="btn-grid"></div>
-      <button class="btn correct">Answer 1</button>
-      <button class="btn wrong">Answer 2</button>
+      <button class="btn">Answer 1</button>
+      <button class="btn">Answer 2</button>
       <button class="btn">Answer 3</button>
       <button class="btn">Answer 4</button>
 
