--- a/index.html
+++ b/index.html
@@ -9,42 +9,32 @@
     <script defer src="assets/js/script.js"></script>
 
     <title>Friends Quiz</title>
-  </head>
-
-  <!--body of work-->
-
-  <body>
-    <!--heading and paragraph for start page-->
-
+ <body>
     <div class="container">
-      <h1>Can You Pass The Ultimate Movie and Series Quiz?</h1>
-      <p>
-        The average fan may know the lyrics to Phoebe's <em>"Smelly Cat"</em> or
-        what the first ever Pixar film was... question is, would you know the
-        year? Now is the time to test your knowledge. The rules are simple, just
-        pick the correct answer out of the four choices, but NO cheating! You
-        can't ask our trusty friend Google!
-      </p>
-      <p>Hit the start button to begin! Good luck.</p>
-
-      <!--question container-->
-
-      <div id="question-container" class="hide"></div>
-      <div id="question">Question</div>
-
-      <!--answer buttons-->
-
-      <div id="answer-buttons" class="btn-grid"></div>
-      <button class="btn">Answer 1</button>
-      <button class="btn">Answer 2</button>
-      <button class="btn">Answer 3</button>
-      <button class="btn">Answer 4</button>
-
-      <!--start and next button-->
-
-      <div class="controls"></div>
-      <button id="start-btn" class="start-btn btn">Start</button>
-      <button id="next-btn" class="next-btn btn hide">Next</button>
+        <h1>Can You Pass The Ultimate Movie and Series Quiz?</h1>
+        <p class ="intro-text">
+            The average fan may know the lyrics to Phoebe's <em>"Smelly Cat"</em> or
+            what the first ever Pixar film was... question is, would you know the
+            year? Now is the time to test your knowledge. The rules are simple, just
+            pick the correct answer out of the four choices, but NO cheating! You
+            can't ask our trusty friend Google!
+        </p>
+        <p>Hit the start button to begin! Good luck.</p>
+        <div id="question-container" class="hide">
+            <div id="question">Question</div>
+            <div id="answer-buttons" class="btn-grid">
+                <button class="btn">Answer 1</button>
+                <button class="btn">Answer 2</button>
+                <button class="btn">Answer 3</button>
+                <button class="btn">Answer 4</button>
+            </div>
+        </div>
+        <div class="controls">
+            <button id="start-btn" class="start-btn btn">Start</button>
+            <button id="end-btn" class="end-btn btn hide">End Game</button>
+            <button id="next-btn" class="next-btn btn hide">Next</button>
+        </div>
     </div>
-  </body>
+</body>
+
 </html>
